--- a/SisMaper/SisMaper.csproj
+++ b/SisMaper/SisMaper.csproj
@@ -2,24 +2,32 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0-windows</TargetFramework>
+    <TargetFramework>net5.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
+  <ItemGroup>
+    <Folder Include="Library" />
+  </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="MySql.Data">
-      <HintPath>E:\RiderProjects\GitProjects\Persistence\bin\Debug\netcoreapp3.1\MySql.Data.dll</HintPath>
-    </Reference>
-    <Reference Include="MySqlConnector">
-      <HintPath>E:\RiderProjects\GitProjects\MySqlConnector\bin\Debug\netcoreapp3.1\MySqlConnector.dll</HintPath>
-    </Reference>
-    <Reference Include="Persistence">
-      <HintPath>E:\RiderProjects\GitProjects\Persistence\bin\Debug\netcoreapp3.1\Persistence.dll</HintPath>
-    </Reference>
-    <Reference Include="PriorityQueue">
-      <HintPath>E:\RiderProjects\GitProjects\Persistence\bin\Debug\netcoreapp3.1\PriorityQueue.dll</HintPath>
-    </Reference>
+    <ProjectReference Include="..\..\MySqlConnector\MySqlConnector.csproj" />
+    <ProjectReference Include="..\..\Persistence\Persistence.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MahApps.Metro" Version="2.4.7" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Images\Hide.png" />
+    <Resource Include="Images\Show.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Database.cfg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
