--- a/SisMaper/SisMaper.csproj
+++ b/SisMaper/SisMaper.csproj
@@ -21,6 +21,10 @@
     <PackageReference Include="Extended.Wpf.Toolkit" Version="4.1.0" />
     <PackageReference Include="MahApps.Metro" Version="2.4.7" />
     <PackageReference Include="MahApps.Metro.IconPacks" Version="4.9.0" />
+    <PackageReference Include="MvvmCross.Binding" Version="5.7.0" />
+    <PackageReference Include="Prism.Wpf" Version="8.1.97" />
+    <PackageReference Include="PropertyChanged.Fody" Version="3.4.0" />
+    <PackageReference Include="System.Windows.Interactivity.WPF" Version="2.0.20525" />
   </ItemGroup>
 
   <ItemGroup>
@@ -46,6 +50,12 @@
 
   <ItemGroup>
     <None Remove="Views\ViewEscolherLote.xaml~" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <Reference Include="BidirectionalDict.dll">
+      <HintPath>Library\BidirectionalDict.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
   <ItemGroup>
