--- a/SisMaper/SisMaper.csproj
+++ b/SisMaper/SisMaper.csproj
@@ -24,6 +24,7 @@
     <PackageReference Include="MvvmCross.Binding" Version="5.7.0" />
     <PackageReference Include="Prism.Wpf" Version="8.1.97" />
     <PackageReference Include="PropertyChanged.Fody" Version="3.4.0" />
+    <PackageReference Include="RestSharp" Version="106.13.0" />
     <PackageReference Include="System.Windows.Interactivity.WPF" Version="2.0.20525" />
   </ItemGroup>
 
