--- a/SisMaper/packages.config
+++ b/SisMaper/packages.config
@@ -1,26 +1,35 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle" version="1.8.5" targetFramework="net48" />
+  <package id="System.Windows.Interactivity.WPF" version="2.0.20525" targetFramework="net48" />
   <package id="cef.redist.x64" version="96.0.14" targetFramework="net48" />
   <package id="cef.redist.x86" version="96.0.14" targetFramework="net48" />
   <package id="CefSharp.Common" version="96.0.141" targetFramework="net48" />
   <package id="CefSharp.Wpf" version="96.0.141" targetFramework="net48" />
-  <package id="ControlzEx" version="5.0.1" targetFramework="net48" />
+  <package id="ControlzEx" version="4.4.0" targetFramework="net48" />
   <package id="DotNetProjects.WpfToolkit.Input" version="6.1.91" targetFramework="net48" />
   <package id="Extended.Wpf.Toolkit" version="4.1.0" targetFramework="net48" />
   <package id="Fluent.Ribbon" version="8.0.3" targetFramework="net48" />
+  <package id="Fody" version="6.5.1" targetFramework="net48" developmentDependency="true" />
   <package id="Google.Protobuf" version="3.14.0" targetFramework="net48" />
   <package id="K4os.Compression.LZ4" version="1.2.6" targetFramework="net48" />
   <package id="K4os.Compression.LZ4.Streams" version="1.2.6" targetFramework="net48" />
   <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net48" />
   <package id="MahApps.Metro" version="2.4.9" targetFramework="net48" />
   <package id="MahApps.Metro.IconPacks" version="4.11.0" targetFramework="net48" />
-  <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.31" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="5.0.0" targetFramework="net48" />
+  <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.39" targetFramework="net48" />
+  <package id="MvvmCross.Core" version="5.7.0" targetFramework="net48" />
+  <package id="MvvmCross.Platform" version="5.7.0" targetFramework="net48" />
+  <package id="MySql.Data" version="8.0.27" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
   <package id="Prism.Core" version="8.1.97" targetFramework="net48" />
   <package id="Prism.Wpf" version="8.1.97" targetFramework="net48" />
+  <package id="PropertyChanged.Fody" version="3.4.0" targetFramework="net48" />
   <package id="RestSharp" version="106.13.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Console" version="4.3.1" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net48" />
-  <package id="System.Windows.Interactivity.WPF" version="2.0.20525" targetFramework="net48" />
 </packages>
