Add Crud Natureza and Fix Configurações

--- a/SisMaper/Database.cfg
+++ b/SisMaper/Database.cfg
@@ -1,7 +1,8 @@
 Server = 127.0.0.1
 Database = sismaper
 Port = 3306
-UserID = root
-Password = root
-
-MaximumPoolSize = 1
+UserID = sismaper
+Password = sismaper
+AutoReconnect = true
+MaximumPoolSize = 100
+MonitorIntervalTime = 10000
