--- a/SisMaper/SisMaper.csproj
+++ b/SisMaper/SisMaper.csproj
@@ -371,6 +371,7 @@
     <Compile Include="Tools\InterfaceExtension.cs" />
     <Compile Include="Tools\NFConverter.cs" />
     <Compile Include="Tools\PFePFValidator.cs" />
+    <Compile Include="Tools\RSAKeys.cs" />
     <Compile Include="ViewModel\BaseCommand.cs" />
     <Compile Include="ViewModel\BaseViewModel.cs" />
     <Compile Include="ViewModel\BuscarProdutoViewModel.cs" />
@@ -382,6 +383,7 @@
     <Compile Include="ViewModel\FaturaViewModel.cs" />
     <Compile Include="ViewModel\LoginViewModel.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
+    <Compile Include="ViewModel\NaturezaViewModel.cs" />
     <Compile Include="ViewModel\ParcelaViewModel.cs" />
     <Compile Include="ViewModel\PedidoViewModel.cs" />
     <Compile Include="ViewModel\ProdutosViewModel.cs" />
@@ -408,6 +410,9 @@
     <Compile Include="Views\ViewEscolherLote.xaml.cs" />
     <Compile Include="Views\ViewFatura.xaml.cs" />
     <Compile Include="Views\ViewMetodoPagamento.xaml.cs" />
+    <Compile Include="Views\ViewNaturezas.xaml.cs">
+      <DependentUpon>ViewNaturezas.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\ViewParcela.xaml.cs" />
     <Compile Include="Views\ViewPedido.xaml.cs" />
     <Compile Include="Views\ViewProdutos.xaml.cs" />
@@ -444,6 +449,7 @@
     <Page Include="Views\ViewEscolherLote.xaml" />
     <Page Include="Views\ViewFatura.xaml" />
     <Page Include="Views\ViewMetodoPagamento.xaml" />
+    <Page Include="Views\ViewNaturezas.xaml" />
     <Page Include="Views\ViewParcela.xaml" />
     <Page Include="Views\ViewPedido.xaml" />
     <Page Include="Views\ViewProdutos.xaml" />
