Modify Startup, Add Owners, Unique TaskBar Window, set MVVM Pattern in MainWindow, Naturezas, and Login

--- a/SisMaper/SisMaper.csproj
+++ b/SisMaper/SisMaper.csproj
@@ -10,7 +10,8 @@
     <AssemblyVersion>1.0.*</AssemblyVersion>
     <Deterministic>false</Deterministic>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    <Platforms>x86;x64;AnyCPU</Platforms>
+    <Platforms>x86;x64</Platforms>
+    <SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(PlatformTarget)' == 'x86'">
     <RuntimeIdentifier Condition="'$(RuntimeIdentifier)' == ''">win-x86</RuntimeIdentifier>
