--- a/SisMaper/SisMaper.csproj
+++ b/SisMaper/SisMaper.csproj
@@ -56,8 +56,21 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\MySqlConnector\MySqlConnector.csproj" />
-    <ProjectReference Include="..\..\Persistence\Persistence.csproj" />
+    <Reference Include="BidirectionalDict">
+      <HintPath>Library\BidirectionalDict.dll</HintPath>
+    </Reference>
+    <Reference Include="MySql.Data">
+      <HintPath>Library\MySql.Data.dll</HintPath>
+    </Reference>
+    <Reference Include="MySqlConnector">
+      <HintPath>Library\MySqlConnector.dll</HintPath>
+    </Reference>
+    <Reference Include="Persistence">
+      <HintPath>Library\Persistence.dll</HintPath>
+    </Reference>
+    <Reference Include="PriorityQueue">
+      <HintPath>Library\PriorityQueue.dll</HintPath>
+    </Reference>
   </ItemGroup>
   
   <PropertyGroup Condition="'$(TargetFramework)' == 'net5.0-windows' AND '$(PublishSingleFile)' == 'true'">
